--- a/RmlUi.Samples.Headless/RmlUi.Samples.Headless.csproj
+++ b/RmlUi.Samples.Headless/RmlUi.Samples.Headless.csproj
@@ -8,7 +8,14 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\RmlUi\RmlUi.csproj" />
+        <ProjectReference Include="..\RmlUi\RmlUi.csproj"/>
     </ItemGroup>
+
+    <Target Name="CopyNativeLibraries" AfterTargets="Build">
+        <ItemGroup>
+            <NativeDeps Include="..\x64\$(Configuration)\**\*"/>
+        </ItemGroup>
+        <Copy SourceFiles="@(NativeDeps)" DestinationFolder="$(TargetDir)" SkipUnchangedFiles="true"/>
+    </Target>
 
 </Project>
